--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: python
 python:
   - 3.6
-script: python tests.py
+install:
+  - pip install codecov
+script:
+  - coverage run tests.py
+after_success:
+  codecov
