--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ python:
 install:
   - pip install codecov
   - pip install flake8
+  - pip install .
 before_script:
   - flake8 .
 script:
-  - coverage run tests.py
+  - coverage run paw/tests/__init__.py
 after_success:
   codecov
