Fix coverage command
Faulty command replaced with automated test discovery.

Part of #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
 before_script:
   - flake8 .
 script:
-  - coverage run paw/tests/__init__.py
+  - coverage run -m unittest discover
 after_success:
   codecov
