--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install codecov
   - pip install flake8
+  - pip install mock
   - pip install .
 before_script:
   - flake8 .
