--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install codecov
   - pip install flake8
   - pip install mock
+  - pip install -r requirements.txt
   - pip install .
 before_script:
   - flake8 .
