--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+apt:
+  packages:
+    - dos2unix
 python:
   - 3.6
 install:
@@ -8,6 +11,7 @@ install:
   - pip install -r requirements.txt
   - pip install .
 before_script:
+  - find /path -type f -print0 | xargs -0 dos2unix --
   - flake8 .
 script:
   - coverage run -m unittest discover
