--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -r requirements.txt
   - pip install .
 before_script:
-  - find /path -type f -print0 | xargs -0 dos2unix --
+  - find . -type f -print0 | xargs -0 dos2unix --
   - flake8 .
 script:
   - coverage run -m unittest discover
