--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: python
-apt:
-  packages:
-    - dos2unix
 python:
   - 3.6
 install:
@@ -11,6 +8,7 @@ install:
   - pip install -r requirements.txt
   - pip install .
 before_script:
+  - sudo apt-get install -y dos2unix
   - find . -type f -print0 | xargs -0 dos2unix --
   - flake8 .
 script:
