Add contents: write for publishing releases to GitHub

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     uses: tehw0lf/workflows/.github/workflows/build-test-publish.yml@main
     permissions:
       actions: write
-      contents: read
+      contents: write
       packages: write
     with:
       tool: "uv"
