--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       actions: write
       contents: write
+      id-token: write
       packages: write
     with:
       tool: "uv"
