Move mock and ruff to dependency groups

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       packages: write
     with:
       tool: "uv"
-      install: "sync --all-extras --dev"
+      install: "sync --all-extras --dev --group lint"
       lint: "run ruff check"
       test: "run python -m unittest discover"
       build_branch: "build"
