--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,21 @@
 [project]
 name="paw"
-version="1.3.1"
+version="1.3.3"
 description="paw - patterns and wordlists in python"
 readme = "README.md"
 authors = [
     { name = "tehw0lf", email = "tehwolf@protonmail.com" }
 ]
-requires-python = ">=3.7"
+requires-python = ">=3.0"
 dependencies = [
-    "mock>=5.1.0",
-    "ruff>=0.8.4",
-    "wlgen>=1.3.1",
+    "wlgen>=1.3.3",
+]
+[dependency-groups]
+dev = [
+  "mock"
+]
+lint = [
+  "ruff"
 ]
 [project.scripts]
 paw = "paw:main"
