Publish GitHub Release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,4 @@ jobs:
       build_main: "build"
       event_name: ${{ github.event_name }}
       artifact_path: "dist"
+      publish_github_release: "true"
