--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     name: external workflow
     uses: tehw0lf/workflows/.github/workflows/build-test-publish.yml@main
     permissions:
-      id-token: write    # REQUIRED - Always needed for OIDC (npm Trusted Publishing + future integrations)
+      id-token: write
       actions: write
       contents: write
       packages: write
@@ -25,3 +25,4 @@ jobs:
       event_name: ${{ github.event_name }}
       artifact_path: "dist"
       publish_github_release: "true"
+      publish_python_libraries: "false"
